--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -4,7 +4,8 @@
 @import "vendors/swiper3";
 @import "vendors/fancybox";
 
-.__grid {
+.__grid
+{
   box-shadow: inset 0 0 0 1px green;
   &:before {
     content: '';
@@ -44,10 +45,11 @@ html {
 }
 
 body {
-  display: flex;
+  display: block;
   position: relative;
   min-width: 1260px;
   min-height: 580px;
+  background: #eee;
   @include font(#000,16px,16px);
 }
 
@@ -100,32 +102,15 @@ body {
   margin: 0 auto;
 }
 
-.main-layout {
+.main {
   box-sizing: border-box;
+  display: block;
   position: relative;
   overflow: hidden;
   width: 100%;
   min-height: 100vh;
-
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: flex-start;
-  justify-content: flex-start;
 }
 
-.main-layout-content {
-  display: block;
-  width: 100%;
-  flex-grow: 1;
-}
-
-.main-layout-footer {
-  display: block;
-  width: 100%;
-  margin: 40px 0 0 0;
-  flex-grow: 0;
-}
 
 // generic
 
@@ -196,12 +181,275 @@ h5 {
 // main
 
 .is-global-header {
+  display: block;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  right: 0;
+  width: 120px;
+  height: 120px;
+  .gh-button {
+    display: block;
+    position: absolute;
+    z-index: 20;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    transition: background .2s;
+    &:hover {
+      background: #222;
+      .gh-burger {
+        i.bl {
+          width: 18px;
+        }
+      }
+    }
+  }
+  .gh-burger {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 32px;
+    height: 32px;
+    margin: -16px 0 0 -16px;
+
+    i {
+      user-select: none;
+      pointer-events: none;
+      display: block;
+      position: absolute;
+      background: #fff;
+      height: 3px;
+      width: 18px;
+      transition: transform .2s, opacity .2s, background .2s, width .2s;
+      will-change: transform, opacity, width;
+      &.tl {
+        top: 5px;
+        right: 14px;
+      }
+      &.tr {
+        top: 5px;
+        left: 14px;
+      }
+      &.ml {
+        top: 15px;
+        right: 14px;
+      }
+      &.mr {
+        top: 15px;
+        left: 14px;
+      }
+      &.bl {
+        top: 25px;
+        right: 14px;
+        width: 8px;
+      }
+      &.br {
+        top: 25px;
+        left: 14px;
+      }
+    }
+  }
+  .gh-dock {
+    pointer-events: none;
+    position: absolute;
+    display: block;
+    z-index: 10;
+    top: 0;
+    right: 0;
+    width: 540px;
+    height: 100vh;
+    background: #fff;
+    transform: translate3d(120px,0,0);
+    opacity: 0;
+    transition: opacity .3s, transform .3s;
+    will-change: transform, opacity;
+    &:before {
+      pointer-events: none;
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: -20px;
+      width: 20px;
+      height: 100%;
+      background: url('/assets/img/shadow-a.png') no-repeat 100% 50%;
+    }
+  }
+
+  .gh-dock-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+  .gh-dock-nav {
+    display: block;
+    width: 100%;
+    margin: 0 0 80px 0;
+    .dn-link {
+      box-sizing: border-box;
+      position: relative;
+      display: block;
+      width: 100%;
+      padding: 14px 0 14px 120px;
+      @include intro-black;
+      @include font(#444,33px,33px);
+      text-transform: uppercase;
+      transition: color .2s;
+      &:before {
+        content: '';
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 5px;
+        height: 100%;
+        background: #db2424;
+      }
+      &:hover {
+        color: #db2424;
+      }
+      &.state-active {
+        color: #db2424;
+        &:before {
+          display: block;
+        }
+      }
+    }
+  }
+  .gn-dock-search {
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
+    padding: 0 120px;
+  }
+
+
+  &.state-header-open {
+    .gh-burger {
+      i {
+        &.tl {
+          transform: rotate(45deg) translate3d(3px,2px,0);
+        }
+        &.tr {
+          transform: rotate(-45deg) translate3d(-3px,2px,0);
+        }
+        &.ml {
+          opacity: 0;
+          transform: translate3d(-12px,0,0);
+          transition: transform .3s, opacity .3s .1s;
+        }
+        &.mr {
+          opacity: 0;
+          transform: translate3d(12px,0,0);
+          transition: transform .3s, opacity .3s .1s;
+        }
+        &.bl {
+          width: 18px;
+          transform: rotate(-45deg) translate3d(3px,-2px,0);
+        }
+        &.br {
+          transform: rotate(45deg) translate3d(-3px,-2px,0);
+
+        }
+      }
+    }
+    .gh-dock {
+      transform: translate3d(0,0,0);
+      opacity: 1;
+      pointer-events: auto;
+    }
+  }
 
 }
 
-.is-global-footer {
+.is-search-tools {
+  position: relative;
+  display: block;
+  width: 100%;
+  .st-search-inner {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: flex-start;
+    border-bottom: 1px solid #000;
+  }
+  .st-search-submit {
+    flex-shrink: 0;
+    flex-grow: 0;
+    position: relative;
+    display: block;
+    width: 40px;
+    height: 40px;
+    transition: background .2s;
+    svg {
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 26px;
+      height: 26px;
+      margin: -13px 0 0 -13px;
+      path {
+        fill: #000;
+        transition: fill .2s;
+      }
+    }
+    &:hover {
+      svg path {
+        fill: #db2424;
+      }
+    }
+  }
+  .st-search-input {
+    flex-shrink: 1;
+    flex-grow: 1;
+    display: block;
+    width: 100%;
+    input {
+      box-sizing: border-box;
+      display: block;
+      position: relative;
+      width: 100%;
+      height: 40px;
+      margin: 0;
+      padding: 0 10px;
+      outline: none;
+      border: none;
+      @include intro-book;
+      @include font(#000,17px,40px);
+      @include placeholder(#000,17px,40px);
+      &:hover {
 
+      }
+      &:focus {
+        @include placeholder(#ccc,17px,40px);
+      }
+    }
+  }
+
+
+  &.state-bounce {
+    .st-search-inner {
+      animation: key-search-bounce 300ms ease-out both;
+    }
+  }
 }
+
+@keyframes key-search-bounce {
+  0%, 100% { transform: translateX(0); }
+  20%, 60% { transform: translateX(-5px); }
+  40%, 80% { transform: translateX(5px); }
+}
+
 
 .is-style {
   p {
@@ -225,6 +473,13 @@ h5 {
   position: relative;
   width: 100%;
   padding: 0 0 0 0;
+}
+
+.page-index {
+  width: 100%;
+  height: 100vh;
+  min-height: 580px;
+  background: #444;
 }
 
 // sfx
