--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -49,7 +49,7 @@ body {
   position: relative;
   min-width: 1260px;
   min-height: 580px;
-  background: #eee;
+  background: #fff;
   @include font(#000,16px,16px);
 }
 
@@ -91,6 +91,10 @@ body {
 
 .state-cookie-privacy {
 
+}
+
+.body-state-index {
+  background: #000;
 }
 
 // layout
@@ -450,7 +454,6 @@ h5 {
   40%, 80% { transform: translateX(5px); }
 }
 
-
 .is-style {
   p {
     a {
@@ -461,6 +464,137 @@ h5 {
 
   }
   ol {
+
+  }
+}
+
+.is-logo {
+  z-index: 100;
+  display: block;
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  img {
+    display: block;
+  }
+}
+
+.is-index-slider {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background: #444;
+  .swiper-container {
+    height: 100%;
+  }
+  .swiper-wrapper {
+    height: 100%;
+  }
+  .swiper-slide {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  // content
+  .ss-inner {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    &:before {
+      pointer-events: none;
+      content: '';
+      display: block;
+      position: absolute;
+      z-index: 10;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,.4);
+    }
+  }
+  .ss-inner-content {
+    display: block;
+    position: absolute;
+    bottom: 40%;
+    left: 0;
+    width: 100%;
+    z-index: 20;
+  }
+  .ss-header {
+    margin-bottom: 80px;
+    @include intro-black;
+    @include font(#ffffff,39px,43px);
+    text-transform: uppercase;
+  }
+  .ss-title {
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .ss-title-text {
+    flex-shrink: 1;
+    flex-grow: 0;
+    @include intro;
+    @include font(#ffffff,45px,51px);
+  }
+  .ss-title-volume {
+    flex-shrink: 0;
+    flex-grow: 0;
+    margin-left: 20px;
+    padding: 15px 25px;
+    @include intro;
+    @include font(#ffffff,21px,21px);
+    border: 2px solid #fff;
+  }
+  .ss-description {
+    @include intro-book;
+    @include font(#ffffff,19px,25px);
+  }
+
+  // arrows
+  .ss-arrow-parent {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+
+    position: absolute;
+    z-index: 10;
+    bottom: calc(40% - 100px);
+    left: 50%;
+    width: 140px;
+    margin-left: -570px;
+  }
+  .ss-arrow {
+    cursor: pointer;
+    user-select: none;
+    position: relative;
+    display: block;
+    width: 60px;
+    height: 60px;
+    background: rgba(0,0,0,.8);
+    transition: background .2s;
+    svg {
+      pointer-events: none;
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin: -7px 0 0 -11px;
+    }
+    &:hover {
+      background: rgba(0,0,0,1);
+    }
 
   }
 }
@@ -479,7 +613,6 @@ h5 {
   width: 100%;
   height: 100vh;
   min-height: 580px;
-  background: #444;
 }
 
 // sfx
