--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -45,11 +45,12 @@ html {
 }
 
 body {
-  display: block;
+  display: flex;
   position: relative;
   min-width: 1260px;
   min-height: 580px;
   background: #fff;
+  overflow-y: scroll;
   @include font(#000,16px,16px);
 }
 
@@ -95,6 +96,10 @@ body {
 
 .body-state-index {
   background: #000;
+  overflow-y: auto;
+  .main-layout-footer {
+    display: none;
+  }
 }
 
 .body-state-nav-open {
@@ -150,13 +155,31 @@ body {
   margin: 0 auto;
 }
 
-.main {
+.main-layout {
   box-sizing: border-box;
-  display: block;
   position: relative;
   overflow: hidden;
   width: 100%;
   min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.main-layout-content {
+  display: block;
+  width: 100%;
+  flex-grow: 1;
+}
+
+.main-layout-footer {
+  display: block;
+  width: 100%;
+  margin: 40px 0 0 0;
+  flex-grow: 0;
 }
 
 // generic
@@ -224,12 +247,6 @@ h5 {
     @if $debug == 1 { box-shadow: inset 0 0 0 1px red; }
   }
 }
-
-// layouts
-
-
-
-
 
 // main
 
@@ -414,6 +431,107 @@ h5 {
   left: 50px;
   img {
     display: block;
+  }
+}
+
+.is-global-footer {
+  display: block;
+  background: #eaeaea;
+  .gf-inner {
+    height: 100px;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .gf-copyright {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .gf-nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .gf-social {
+
+  }
+
+  .gf-meta-a {
+    display: block;
+    @include intro;
+    @include font(#818181,13px,13px);
+    transition: color .2s;
+    + .gf-meta-a {
+      margin-left: 25px;
+    }
+    &.state-link {
+      &:hover {
+        color: #000;
+      }
+    }
+  }
+
+  .gf-meta-b {
+    display: block;
+    @include intro;
+    @include font(#818181,13px,13px);
+
+  }
+
+  .gf-meta-c {
+    display: block;
+    @include intro;
+    @include font(#000,13px,13px);
+    transition: color .2s;
+    + .gf-meta-c {
+      margin-left: 25px;
+    }
+    &:hover {
+      color: red;
+    }
+
+  }
+
+}
+
+.is-social-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  .social-item {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
+    width: 32px;
+    height: 32px;
+    background: #d3d3d3;
+    border-radius: 50%;
+    transition: background .2s;
+    + .social-item {
+      margin-left: 12px;
+    }
+
+    svg {
+      display: block;
+    }
+
+    &:hover {
+      background: #444;
+    }
   }
 }
 
@@ -778,7 +896,7 @@ h5 {
     width: 180px;
     height: 180px;
     margin-right: 20px;
-    background: #ddd;
+    background: #eaeaea;
   }
   .pi-preview {
     flex-grow: 1;
