--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -4,6 +4,7 @@
 @import "vendors/swiper3";
 @import "vendors/fancybox";
 @import "vendors/mouseplayicon";
+@import "vendors/selectric";
 
 .__grid
 {
@@ -755,6 +756,89 @@ p {
   40%, 80% { transform: translateX(5px); }
 }
 
+.is-form-field {
+  position: relative;
+  display: block;
+  margin: 0 0 20px 0;
+
+  // basic
+  label {
+    position: relative;
+    display: block;
+    z-index: 10;
+  }
+  .ff-label {
+    position: relative;
+    display: block;
+    z-index: 10;
+    margin: 0 0 7px 0;
+    @include intro-book;
+    @include font(#444,11px,11px);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    em {
+      @include times;
+      font-style: normal;
+    }
+  }
+  .ff-error-parent {
+    display: block;
+    overflow: hidden;
+    text-align: left;
+    @include arial;
+    @include font(#f0544f,12px,20px);
+    height: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .2s, visibility .2s, height .2s;
+  }
+
+  // fields type
+  &.field-select {
+    select {
+      box-sizing: border-box;
+      display: block;
+      width: 100%;
+      padding: 11px 5px 12px 5px;
+      outline: none;
+      border-width: 0 0 1px 0;
+      border-color: #000;
+      border-style: solid;
+      @include intro;
+      @include font(#000,16px,48px);
+      box-shadow: inset 1px 0 0 0 transparent;
+      transition: border .2s, box-shadow .2s;
+    }
+  }
+
+  // state error
+  &.state-error {
+    .ff-error-parent {
+      height: 22px;
+      opacity: 1;
+      visibility: visible;
+    }
+    &.field-text {
+      input, textarea {
+        border-left-color: #f0544f !important;
+        box-shadow: inset 1px 0 0 0 #f0544f !important;
+      }
+    }
+    &.field-select {
+      select, input {
+        border-left-color: #f0544f !important;
+        box-shadow: inset 1px 0 0 0 #f0544f !important;
+      }
+    }
+    &.field-group {
+      &:before {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+  }
+}
+
 .is-style {
   ul {
 
@@ -1193,6 +1277,19 @@ p {
       margin-bottom: 0;
     }
   }
+  .ps-h-layout {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+    .ps-h-left {
+      display: block;
+    }
+    .ps-h-right {
+      display: block;
+    }
+  }
   .ps-slider-parent {
     position: relative;
     display: block;
@@ -1213,11 +1310,18 @@ p {
 
   .ps-cell {
     display: block;
-    width: 500px;
-    height: 50vh;
-    min-height: 290px;
-    max-height: 450px;
     background: #dadada;
+    .ps-cell-blank {
+      user-select: none;
+      pointer-events: none;
+      position: relative;
+      display: block;
+      z-index: 1;
+      width: auto;
+      height: 50vh;
+      min-height: 290px;
+      max-height: 450px;
+    }
     &:before {
       pointer-events: none;
       content: '';
@@ -1633,6 +1737,30 @@ p {
   }
 }
 
+.is-header-filter {
+  position: relative;
+  display: block;
+  .hf-inner {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .is-form-field {
+    margin: 0;
+    width: 240px;
+    + .is-form-field {
+      margin-left: 10px;
+    }
+  }
+  &.state-progress {
+    pointer-events: none;
+  }
+}
+
+
+
 // pages
 
 .page-default {
@@ -1682,6 +1810,8 @@ p {
 // small screen query
 
 @media (max-width: 1340px), (max-height: 600px) {
+
+  // header
   .is-global-nav {
     width: 90px;
     height: 90px;
@@ -1707,10 +1837,23 @@ p {
   .page-default {
     padding-top: 100px;
   }
+
+  // project slider
+  .is-project-slider {
+    .ps-cell-preview {
+      padding: 20px;
+    }
+    .ps-c-title {
+      font-size: 35px;
+      line-height: 40px;
+    }
+    .ps-c-description {
+      font-size: 15px;
+      line-height: 19px;
+    }
+
+  }
 }
 
 // 320px version
 // @import "vendors/mobile320";
-
-
-
