--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -1844,8 +1844,15 @@ p {
     position: relative;
     width: 100%;
     height: 100%;
+    background: #fff;
+    &.ss-black {
+      background: #4e5154;
+    }
   }
 }
+
+
+
 
 // pages
 
